<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--Initial Screen-->
    <string name="initial_question1">Q1 : Are you willing to participate in the study?</string>
    <string name="initial_question2">Q2 : Are you or any of your immediately family members / relatives / close friends currently working for the following types of companies?</string>
    <string name="initial_question3">Q3 : Have you or any of your immediately family members / relatives / close friends worked in the following types of companies for the past 6 months?</string>
    <string name="initial_question4">Q4 : Have you or any immediate member of your family participated in any form of TV or Radio Survey in your barangay within the last six (6) months?</string>
    <string name="initial_question5">Q5 : Have you or any immediate member of your family participated in any promos in your barangay in the past six (6) months?</string>

    <string name="agree_label">AGREE</string>
    <string name="disagree_label">DISAGREE</string>

    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>

    <string name="ok_label">OK</string>

    <string name="option1">Research Company</string>
    <string name="option2">TV Station</string>
    <string name="option3">Cable TV Station</string>
    <string name="option4">Radio Station</string>
    <string name="option5">Newspaper &amp; Magazine</string>
    <string name="option6">Advertising Agencies</string>
    <string name="option7">Associations or Groups of People voluntarily serving media companies (TV/Radio/Newspaper/Magazines</string>
    <string name="option8">NONE OF THE ABOVE</string>

    <!--Main Info Screen-->
    <string name="panel_number_label">PANEL NUMBER</string>
    <string name="member_number_label">MEMBER NUMBER</string>
    <string name="municipality_label">MUNICIPALITY</string>
    <string name="barangay_label">BARANGAY</string>
    <string name="name_of_respondent_label">NAME OF RESPONDENT</string>
    <string name="address_label">ADDRESS</string>
    <string name="age_label">AGE</string>
    <string name="gender_label">GENDER</string>
    <string name="date_of_interview_label">DATE OF INTERVIEW  </string>
    <string name="time_start_label">TIME START</string>
    <string name="time_end_label">TIME END</string>
    <string name="day_of_week_label">DAY OF WEEK</string>
    <string name="contact_number_label">CONTACT NUMBER</string>
    <string name="eco_class_label">ECO CLASS</string>

    <string name="male">MALE</string>
    <string name="female">FEMALE</string>

    <!--Main Info Screen Error message-->
    <string name="panel_number_error">Must be equal to 7 character.</string>
    <string name="member_number_error">Must be equal to 2 character.</string>
    <string name="municipality_error">Municipality cannot be empty.</string>
    <string name="barangay_error">Barangay cannot be empty.</string>
    <string name="name_of_respondent_error">Name of respondent cannot be empty.</string>
    <string name="address_error">Address cannot be empty.</string>
    <string name="age_error">Age cannot be empty.</string>
    <string name="gender_error">Gender cannot be empty.</string>
    <string name="date_of_interview_error">Date of interview cannot be empty.</string>
    <string name="time_start_error">Time start cannot be empty.</string>
    <string name="time_end_error">Time end cannot be empty.</string>
    <string name="day_of_week_error">Not valid day of week.</string>
    <string name="contact_number_error">Contact number invalid.</string>
    <string name="eco_class_error">Not valid eco class.</string>

    <!--Actual Questions-->
    <string name="actual_q1_label">Q1: Area</string>

    <string name="actual_q2_label">Q2: Do you own the house or are you renting?</string>
    <string name="actual_q2a_label">Q2a: How much is your monthly rent for this house?</string>

    <string name="actual_q3_label">Q3: What is the first/primary language of the home?</string>
    <string name="actual_q4_label">Q4: What is the primary religion of the home? </string>

    <string name="actual_q5a_label">Q5a: What type of radio device do you have in your home?</string>
    <string name="actual_q5b_label">Q5b: Does it have AM or FM radio broadcast?</string>
    <string name="actual_q5b1_label">Q5b1: Radio Cassette Recorder</string>
    <string name="actual_q5b2_label">Q5b2: Stereo Component</string>
    <string name="actual_q5b3_label">Q5b3: Karaoke</string>
    <string name="actual_q5b4_label">Q5b4: DVD/CD Players</string>
    <string name="actual_q5b5_label">Q5b5: Car Radio</string>
    <string name="actual_q5b6_label">Q5b6: Transistor Radio</string>
    <string name="actual_q5b7_label">Q5b7: Cellphone</string>
    <string name="actual_q5b8_label">Q5b8: MP3</string>
    <string name="actual_q5b9_label">Q5b9: iPod/iPad</string>
    <string name="actual_q5b10_label">Q5b10: Internet Streaming (PC/ Laptop)</string>
    <string name="actual_q5b11_label">Q5b11: Others</string>

    <string name="actual_q6_label">Q6: Number of Radio Sets Owned in the Household (including Car radio, portable radio, cellular phones with radio, etc.)</string>
    <string name="actual_q7_label">Q7: How many people live in this household permanently? Please include yourself, your relatives, boarders and maids. \nPlease include yourself, your relatives, boarders and maids.</string>

    <string name="actual_q8_label">Q8: Names of all members of your household from the eldest to the youngest (Name)</string>
    <string name="actual_q8a_label">Q8a: Member Number</string>
    <string name="actual_q8_header_label">FOR EACH MEMBER OF THE FAMILY LISTED ON Q8</string>

    <string name="actual_q9_label">Q9: Age Group</string>
    <string name="actual_q10_label">Q10: Sex/Gender</string>
    <string name="actual_q11_label">Q11: Role in Household</string>
    <string name="actual_q12_label">Q12: Civil Status</string>
    <string name="actual_q13_label">Q13: Highest educational attainment</string>

    <string name="actual_q14_label">Q14: Does (NAME) have children?</string>
    <string name="actual_q14a_label">Q14a: Mother or Not</string>
    <string name="actual_q14b_label">Q14b: Father or Not</string>
    <string name="actual_q14c_label">Q14c: Mother with Children 0&#8211;2</string>
    <string name="actual_q14d_label">Q14d: Mother with Children 3&#8211;6</string>
    <string name="actual_q14e_label">Q14e: Mother with Children 7&#8211;12</string>

    <string name="actual_q15_label">Q15: Occupation</string>
    <string name="actual_q15a_label">Q15a: Employer</string>

    <string name="actual_q16_label">Q16: Recency of Radio Listenership</string>
    <string name="actual_q17_label">Q17: Frequency of AM Listening/Exposure</string>
    <string name="actual_q18_label">Q18: Frequency of FM Listening/Exposure</string>

    <string name="actual_q19a_label">Q19a: Times of Day Listening to AM Station/s</string>
    <string name="actual_q19b_label">Q19b: Times of Day Listening to FM Station/s</string>

    <string name="actual_q20_label">Q20: AM Radio Stations Listened To</string>
    <string name="actual_q20a_label">Q20a: What AM stations do you usually listen to?</string>
    <string name="actual_q20b_label">Q20b: How many hours in a day do you usually listen to these AM stations?</string>

    <string name="actual_q21_label">FM Radio Stations Listened To</string>
    <string name="actual_q21a_label">Q21a: What FM stations do you usually listen to?</string>
    <string name="actual_q21b_label">Q21b: How many hours in a day do you usually listen to these AM stations?</string>

    <string name="actual_q22_label">Q22: Internet Connection at Home</string>
    <string name="actual_q23_label">Q23: Internet Connection Outside of Home</string>
    <string name="actual_q24_label">Q24: Frequency of Internet Usage</string>

    <string name="actual_q25_label">Q25: Devices Used to Access the Internet</string>
    <string name="actual_q25a_label">Q25a: Desktop PC</string>
    <string name="actual_q25b_label">Q25b: Laptop/Notebook/Netbook</string>
    <string name="actual_q25c_label">Q25c: Smartphone/Feature Phone/Phablet</string>
    <string name="actual_q25d_label">Q25d: Tablet</string>
    <string name="actual_q25e_label">Q25e: Game Console</string>
    <string name="actual_q25f_label">Q25f: Internet-enabled TV/Smart TV</string>
    <string name="actual_q25g_label">Q25g: Smartwatch</string>
    <string name="actual_q25h_label">Q25h: Others(Specify)</string>

    <string name="actual_q26_label">Q26: How much is the household monthly income?</string>
    <string name="actual_q27_label">Q27: Which of the following do you have in your household and are operable / in working order?</string>

    <string name="radio_am">AM</string>
    <string name="radio_fm">FM</string>
    <string name="radio_both">Both</string>

    <string name="load_options_label">[ Select %1s Here ]</string>
    <string name="choose_items">Choose Items</string>

    <string name="terminate_msg">Selected choice/s will not allow you to continue, please confirm.</string>
    <string name="complete_msg">Congratulations! Do you wish to save the completed questions?</string>

    <string name="diary_panel_number">Panel Number: %1s</string>
    <string name="diary_member_number">Member Number: %1s</string>
    <string name="diary_name_of_respondent">Name of Respondent: %1s</string>

    <string name="add_diary_btn">Add Diary</string>

    <string name="date_from">Date From: %1s</string>
    <string name="date_to">Date To: %1s</string>

    <string name="no_diary_available_msg">No Diary available. Please select HRF.</string>

    <string name="details_day_of_study_label">Day of Study</string>
    <string name="details_diary_date_label">Diary Date</string>
    <string name="details_time_of_listening_label">Time of Listening</string>
    <string name="details_radio_stations_label">Radio Stations</string>
    <string name="details_place_of_listening_label">Select Place Of Listening</string>
    <string name="details_device_label">Device</string>

    <string name="tap_select_day_of_study">[ Tap Here ] Select Day of Study</string>
    <string name="tap_select_diary_date">[ Tap Here ] Select Diary Date</string>
    <string name="tap_select_time_of_listening">[ Tap Here ] Select Time of Listening</string>
    <string name="tap_select_radio_stations">[ Tap Here ] Select Radio Stations</string>
    <string name="tap_select_place_of_listening">[ Tap Here ] Select Place Of Listening</string>
    <string name="tap_select_device">[ Tap Here ] Select Device</string>

    <string name="delete_msg">Are you sure do you want to delete this item?</string>

    <string name="main_info_exist_msg">Panel Number with Member Number already exist.</string>
    <string name="main_info_error_msg">Unable to save Main info, please try again.</string>

    <string name="exit">Do you want to %1s?</string>

    <string name="date_of_interview">%1s/%2s/%3s</string>
    <string name="text_option">[%1s] %2s</string>

    <string name="success">Successfully completed actual questions. Please select option below to continue.</string>
</resources>