<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainInfoViewModel"
            type="com.radiostudies.main.ui.viewmodel.MainInfoViewModel" />
    </data>

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_bg"
                android:padding="@dimen/padding16">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/main_info_title"
                    style="@style/AvenirHeavy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/main_info_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/panel_number_field"
                    style="@style/AvenirMedium.Black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin20"
                    android:ems="10"
                    android:hint="@string/panel_number_label"
                    android:inputType="textPersonName"
                    android:maxLength="7"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_info_title" />

                <EditText
                    android:id="@+id/member_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/member_number_label"
                    android:inputType="textPersonName"
                    android:maxLength="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/panel_number_field" />

                <EditText
                    android:id="@+id/municipality_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/municipality_label"
                    android:inputType="textMultiLine"
                    android:maxLength="60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/member_number_field" />

                <EditText
                    android:id="@+id/barangay_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/barangay_label"
                    android:inputType="textMultiLine"
                    android:maxLength="60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/municipality_field" />

                <EditText
                    android:id="@+id/name_of_respondent_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/name_of_respondent_label"
                    android:inputType="textPersonName"
                    android:maxLength="80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/barangay_field" />

                <EditText
                    android:id="@+id/address_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/address_label"
                    android:inputType="textMultiLine"
                    android:maxLength="120"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_of_respondent_field" />

                <EditText
                    android:id="@+id/age_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/age_label"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address_field" />

                <EditText
                    android:id="@+id/gender_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/gender_label"
                    android:inputType="textPersonName"
                    android:maxLength="6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/age_field" />

                <EditText
                    android:id="@+id/date_of_interview_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/date_of_interview_label"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender_field" />

                <EditText
                    android:id="@+id/time_start_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/time_start_label"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_of_interview_field" />

                <EditText
                    android:id="@+id/time_end_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/time_end_label"
                    android:inputType="textPersonName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_start_field" />

                <EditText
                    android:id="@+id/day_of_week_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/day_of_week_label"
                    android:inputType="textPersonName"
                    android:maxLength="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/time_end_field" />

                <EditText
                    android:id="@+id/contact_number_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:ems="10"
                    android:hint="@string/contact_number_label"
                    android:inputType="number"
                    android:maxLength="20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/day_of_week_field" />

                <EditText
                    android:id="@+id/eco_class_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/eco_class_label"
                    android:inputType="textPersonName"
                    android:maxLength="2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contact_number_field" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/continue_button"
                    style="@style/AvenirMedium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height50"
                    android:layout_marginTop="@dimen/margin50"
                    android:background="@drawable/btn_selector_shape"
                    android:enabled="true"
                    android:gravity="center_vertical|center_horizontal"
                    android:onClick="onClick"
                    android:text="@string/continue_btn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/eco_class_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>