<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding16"
    app:cardCornerRadius="@dimen/radius16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding16">

        <ImageView
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_time_of_listening"
                style="@style/AvenirHeavy.PrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_time_of_listening_label" />

            <View
                android:id="@+id/line_layout1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin5"
                android:background="@color/line_bg" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/details_time_of_listening_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout1" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_time_of_listening_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_radio_stations"
                style="@style/AvenirHeavy.PrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_radio_stations_label" />

            <View
                android:id="@+id/line_layout2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin5"
                android:background="@color/line_bg" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/details_radio_stations_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout2" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_radio_stations_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_place_of_listening"
                style="@style/AvenirHeavy.PrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_place_of_listening_label" />

            <View
                android:id="@+id/line_layout3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin5"
                android:background="@color/line_bg" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/details_place_of_listening_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout3" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_place_of_listening_layout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/details_device"
                style="@style/AvenirHeavy.PrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_device_label" />

            <View
                android:id="@+id/line_layout4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/margin5"
                android:background="@color/line_bg" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:id="@+id/details_device_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>